--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
 body {
   text-align: center;
-  color: pink;
-  background-color: #222;
+  color: #dddddd;
+  background-color: #666666;
 }
 
 .App-header {
-  height: 150px;
   padding: 20px;
+  color: #d5a6bd;
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 2em;
+}
+
+.App > p {
+  width: 80vw;
+  text-align: center;
+  margin: 0 auto 1vw;
 }
