--- a/src/Components/SearchForm.css
+++ b/src/Components/SearchForm.css
@@ -1,9 +1,9 @@
-.search-form {
+.inactive {
   width: 80vw;
   margin: 0 auto;
 }
 
-.search-form > div > input {
+.inactive > div > input {
   border: 3px solid #c27ba0;
   padding: 1vw;
   margin: 0 3vw;
@@ -11,7 +11,7 @@
   font-size: 1em;
 }
 
-.search-form > .button {
+.inactive > .button {
   margin: 1vw;
   font-weight: bold;
   background-color: #c27ba0;
@@ -20,4 +20,8 @@
   text-shadow: 1px 1px black;
   box-shadow: 2px 2px black;
   font-size: 1em;
+}
+
+.active {
+  display: none;
 }
