--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -25,3 +25,15 @@
 .page-link:hover {
   color: #d5a6bd;
 }
+
+.try-section {
+  display: flex;
+  justify-content: space-around;
+  border: lightgrey 1px solid;
+}
+
+.try-child {
+  margin: 0;
+  height: 80vh;
+  width: 50vw;
+}
