--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,18 @@
 body {
   text-align: center;
   color: #dddddd;
+  text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
   background-color: #666666;
 }
 
 .App-header {
-  padding: 20px;
-  color: #d5a6bd;
+  padding: 5px;
+  color: #AF8C86;
+  background-color: #36312D;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.65),
+      rgba(0, 0, 0, 0.65)
+      );
 }
 
 .App-title {
@@ -17,4 +23,13 @@ body {
   width: 80vw;
   text-align: center;
   margin: 0 auto 1vw;
+}
+
+.App {
+  background-image: linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    ), url('webpic.jpg');
+  height: 100vh;
+  background-size: cover;
 }
