--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -10,6 +10,11 @@
   list-style-type: none;
   padding: 1vw;
   margin: 3vh;
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    );
+  background-color: #EEC2BF;
   border: solid white 1px;
 }
 
@@ -20,6 +25,7 @@
 .page-link {
   color: black;
   text-decoration: none;
+  text-shadow: 1px 1px rgba(0,0,0,0.4);
 }
 
 .page-link:hover {
