--- a/src/Components/Status.css
+++ b/src/Components/Status.css
@@ -1,5 +1,7 @@
 .status {
-  background-color: darkgrey;
+  /* background-color: darkgrey; */
+  display: inline-block;
+  text-shadow: 1px 1px rgba(0,0,0,0.4);
 }
 
 .error {
