--- a/src/Components/SearchForm.css
+++ b/src/Components/SearchForm.css
@@ -14,7 +14,8 @@
 
 .button {
   margin: 1vw;
-  padding: 0.5vh 1vw;
+  padding: 0.7vh 1.2vw;
+  margin: 2vh;
   font-weight: bold;
   background-color: #AF8C86;
   color: black;
