--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -25,7 +25,7 @@
 .page-link {
   color: black;
   text-decoration: none;
-  text-shadow: 1px 1px rgba(0,0,0,0.4);
+  text-shadow: none;
 }
 
 .page-link:hover {
