--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ body {
       rgba(0, 0, 0, 0.5)
     ), url('webpic.jpg');
   height: 100%;
-  min-height: 100vw;
+  min-height: 100vh;
   background-size: cover;
 }
 
