--- a/src/Components/Results.css
+++ b/src/Components/Results.css
@@ -54,3 +54,12 @@
   height: 80vh;
   width: 50vw;
 }
+
+.graph-container {
+  background: linear-gradient(
+      rgba(0, 0, 0, 0.5),
+      rgba(0, 0, 0, 0.5)
+    );
+  background-color: #EEC2BF;
+  border: solid white 1px;
+}
